# demo

./: .gitignore  LICENSE  README.md  config.go  fsf.spec  go.mod  handlers.go  main.go  package-lock.json  package.json  pyproject.toml  server.go  state.go  ui.go  vite.config.js
.github/workflows/: build-binary.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  release.yml  releases.yml
cli/: fscl.py  fsf.py  fsync.py
cli/commands/: config.py  fetch.py  help.py  providers.py  setup.py  status.py
cli/providers/cloudflare/: account.py  kv.py
cli/providers/supabase/: db.py
cli/security/: tokens.py
cmd/formseal-sync/: config.go  main.go
docs/: getting-started.md  troubleshooting.md
installer/windows/: installer.nsi
logic/: app.go
providers/: registry.go
providers/cloudflare/: cloudflare.go  file.go
providers/supabase/: db.go  supabase.go
src/: index.html  main.js  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  tauri.conf.json
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/cloudflare/: account.rs  mod.rs
src-tauri/src/providers/cloudflare/storage/: kv.rs  mod.rs
src-tauri/src/providers/supabase/: account.rs  mod.rs
src-tauri/src/providers/supabase/storage/: db.rs  mod.rs
tray/: config.go  config_window.go  daemon.go  dashboard.go  icon.go  main.go
tray/daemon/: config.go  sync.go
tray/dash/: handlers.go  server.go
tray/dash/ui/: ui.go
tray/providers/: providers.go
(+2 files in other folders)
