[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fsf"
version = "2.0.0"
description = "formseal-fetch - CLI tool for fetching encrypted form submissions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "keyring>=25.0",
]

[project.scripts]
fsf = "cli.fsf:main"

[tool.setuptools]
packages = ["cli", "cli.commands", "cli.providers", "cli.providers.cloudflare", "cli.providers.cloudflare.storage", "cli.security"]