[package]
name = "formseal-sync"
version = "1.0.0"
description = "formseal-sync — fetch encrypted form submissions"
authors = ["formseal"]
edition = "2021"

[lib]
name = "formseal_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "5.0"
anyhow = "1.0"
urlencoding = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true